2003-10-15  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): #endif->#else.

2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Don't define __GNUC__ if using a non-GNU compiler.
	Use a consistent spacing scheme.

2003-08-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): Compiler quietus.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* nas.c (AudioLibraryVersionMajor, AudioLibraryVersionMinor):
	Ensure they are #define'd.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* frame-x.c (x_update_frame_external_traits): Fix XtSetArg idiom.

2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Check __GNUC_PATCHLEVEL__ definition.
	* depend: Regenerate.

2003-10-13  Jerry James  <james@xemacs.org>

	* dumper.h: Use {BEGIN,END}_C_DECLS instead of explicit #ifdef.
	* glyphs-eimage.c: Ditto.
	* glyphs-gtk.c: Ditto.
	* glyphs-msw.c: Ditto.
	* glyphs-x.c: Ditto.
	* gtk-xemacs.h: Ditto.
	* libinterface.h: Ditto.
	* lrecord.h: Ditto.
	* process.h: Ditto.
	* symeval.h: Ditto.
	* sysdll.h: Ditto.
	* syswindows.h: Ditto.
	* text.h: Ditto.
	* lisp.h: Ditto.  Move basic compiler defines to compiler.h.
	Remove redundant definitions.  Add MALLOC attribute to xmalloc,
	xcalloc, etc.  Change attribute uses to match new compiler.h.
	* compiler.h: New file containing basic compiler defines from lisp.h.
	* s/windowsnt.h (DECLARE_DOESNT_RETURN): Remove definitions now in
	compiler.h.

2003-10-10  Jerry James  <james@xemacs.org>

	* alloc.c (make_compiled_function): Fix C++ breakage introduced by
	2003-07-25 patch.

2003-07-25  Eric Benson  <eric_a_benson@yahoo.com>

	Delay the allocation and initialization of the args array in
	compiled_function objects from creation until first use, thus
	avoiding a bug in the portable dumper. See mail with subject
	"Symbol's value as variable is void: region" in the July 2003
	xemacs-beta archives.